# embedded-learning

./: .gitignore  .gitmodules  README.md
flashing-led/button/: button.py
flashing-led/flash_led/: flash_led.cpp
gpio_rest/: CMakeLists.txt  CMakePresets.json
led-control/: README.md
led-control/flashing-led/: .gitignore
led-control/flashing-led/button/: Makefile  README.md  button.cpp
led-control/flashing-led/flash_led/: README.md
led-control/flashing-led/gpio_raii/: Makefile  README.md  gpio_pin.h  main.cpp
led-control/http-led/: CMakeLists.txt  README.md
led-control/http-led/src/: gpio_pin.h  main.cpp
led-control/http-led/src/stubs/: pigpio.cpp  pigpio.h
